--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div class="movies"></div>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
   </body>
 </html>
